; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_periph_ctrl.c_periph_module_reset.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_periph_ctrl.c_periph_module_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@periph_spinlock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @periph_module_reset(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 @portENTER_CRITICAL_SAFE(i32* @periph_spinlock)
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @get_rst_en_reg(i32 %4)
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @get_rst_en_mask(i32 %6, i32 0)
  %8 = call i32 @DPORT_SET_PERI_REG_MASK(i32 %5, i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @get_rst_en_reg(i32 %9)
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @get_rst_en_mask(i32 %11, i32 0)
  %13 = call i32 @DPORT_CLEAR_PERI_REG_MASK(i32 %10, i32 %12)
  %14 = call i32 @portEXIT_CRITICAL_SAFE(i32* @periph_spinlock)
  ret void
}

declare dso_local i32 @portENTER_CRITICAL_SAFE(i32*) #1

declare dso_local i32 @DPORT_SET_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @get_rst_en_reg(i32) #1

declare dso_local i32 @get_rst_en_mask(i32, i32) #1

declare dso_local i32 @DPORT_CLEAR_PERI_REG_MASK(i32, i32) #1

declare dso_local i32 @portEXIT_CRITICAL_SAFE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
